# LLM-Detector-Reboot

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  beet2_implementation_roadmap.md  docker-compose.yaml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
beet/: __init__.py  api.py  calibration.py  cascade.py  cli.py  config.py  console.py  contracts.py  decision.py  explain.py  history.py  normalizer.py  pipeline.py  report.py  router.py  runtime.py  sidecar.py
beet/adversarial/: __init__.py  generator.py  registry.py  transforms.py
beet/detectors/: __init__.py  contrastive_gen.py  contrastive_lm.py  contributor_graph.py  cross_similarity.py  dna_gpt.py  fingerprint_vocab.py  instruction_density.py  mixed_boundary.py  nssi.py  perturbation.py  preamble.py  prompt_structure.py  surprisal_dynamics.py  token_cohesiveness.py  voice_spec.py
configs/: default.yaml  no-api.yaml  production.yaml  screening.yaml  strict.yaml
docs/: architecture.md  building.md  configuration.md  deployment.md
scripts/: calibrate_conformal.py  calibrate_detectors.py  download_hc3.py  run_benchmark.py  train_fusion.py
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  sidecar.rs
tests/: conftest.py  test_api.py  test_availability.py  test_calibration.py  test_cascade.py  test_config.py  test_contracts.py  test_decision.py  test_drift_wiring.py  test_eval_serialization.py  test_fusion.py  test_gui_server.py  test_history.py  test_history_stats.py  test_http_api.py  test_monitoring.py  test_normalizer.py  test_pipeline.py  test_privacy.py  test_privacy_retention.py  test_provenance_chain.py  test_redact.py  test_regression.py  test_report.py  test_router.py  test_rpc_sidecar.py  test_runtime.py
(+62 files in other folders)
